Fix the proxy upload with custom headers Fix some small CSS issues with automatic light/dark mode Cleanup some CSS

--- a/app/widgets/Visio/visio.css
+++ b/app/widgets/Visio/visio.css
@@ -102,10 +102,11 @@ body {
     }
 }
 
-#visio header {
+#visio header.big {
     position: absolute;
     width: 100%;
     z-index: 1;
+    background-color: transparent;
 }
 
 #visio header ul.list li {
