--- a/public/theme/css/header.css
+++ b/public/theme/css/header.css
@@ -6,7 +6,6 @@ header.big {
     max-width: 100%;
     color: white;
     position: relative;
-    margin-bottom: 0.5rem;
 }
 
 header.big.top {
